# sphinx-documentation-template

./: .buildinfo  .prospector.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/: example.doctree  example.folder.doctree  modules.doctree
.github/workflows/: ci.yml  deploy.yml
_sources/modules/: example.folder.rst.txt  example.rst.txt
docs/: README_PT.md  conf.py  index.rst
example/: __init__.py  __main__.py
example/folder/: __init__.py  class.py  function.py
modules/: example.folder.html  example.html  modules.html
requirements/: dev.txt
