[tool.poetry]
name = "sphinx-documentation-template"
version = "0.1.0"
description = "Template of Sphinx documentation for Python projects"
authors = ["Mateus Oliveira"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
editorconfig-checker = "^2.4.0"
isort = "^5.10.1"
prospector = "^1.7.7"
safety = "^1.10.3"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
verbose = true
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.black]
line-length = 79
verbose = true
